# perfect-rail

./: .gitignore  Project31.sln  README.md
Project31/: AlbumArt.cpp  AlbumArt.h  AudioManager.cpp  AudioManager.h  AudioVisualizer.cpp  AudioVisualizer.h  CMakeLists.txt  ComboText.cpp  ComboText.h  DebugingScene.cpp  DebugingScene.h  GameManager.cpp  GameManager.h  GameScene.cpp  GameScene.h  HpBar.cpp  HpBar.h  KeyManager.cpp  KeySettingModal.cpp  KeySettingModal.h  KeySettingScene.cpp  KeySettingScene.h  KeysManager.h  MainMenuScene.cpp  MainMenuScene.h  NameInputUI.cpp  NameInputUI.h  Note.cpp  Note.h  NotePlate.h  OptionScene.cpp  OptionScene.h  Project31.vcxproj  Project31.vcxproj.filters  ReadyText.cpp  ReadyText.h  ResultScene.cpp  ResultScene.h  ResultUI.cpp  ResultUI.h  (+38 more)
Project31/Songs/: convert.py  looong.py
Project31/Songs/Amazing Mirage/: Expert.ptr  Hard.ptr  Normal.ptr
Project31/Songs/Chronomia/: Expert.ptr  Hard.ptr  Normal.ptr
Project31/Songs/Clouds Schatze/: Expert.ptr
Project31/Songs/End Time/: Expert.ptr  Hard.ptr  Normal.ptr
Project31/Songs/FLOWER/: Expert.osu  Expert.ptr  Hard.ptr  Normal.ptr
Project31/Songs/Fallen/: Expert.ptr  Hard.ptr  Normal.ptr
Project31/Songs/Fly far bounce/: Expert.ptr  Hard.ptr  Normal.ptr
Project31/Songs/Go Beyond/: Expert.ptr  Normal.osu  Normal.ptr
Project31/Songs/INTERNET YAMERO/: Expert.osu
Project31/Songs/KillerToy/: Expert.osu
Project31/Songs/King Atlantis/: Expert.osu  Expert.ptr
Project31/Songs/KingWorld/: Expert.osu  Hard.osu  sasakure.UK feat. Shirakami Fubuki - KINGWORLD (Rivals_7) [Beginner].osu
Project31/Songs/Oceanus/: Expert.ptr
Project31/Songs/Ouka Ryouran/: Expert.ptr  Hard.ptr  Normal.ptr
Project31/Songs/SAtAN/: Expert.ptr  Hard.ptr  Normal.ptr
Project31/Songs/The Shortest Mashcore Ever/: Hard.ptr  (+1 more)
test/: CMakeLists.txt  main.cpp
(+23 files in other folders)
